[metadata]
name = alamo-scheduler
author = Allegro Group - Asgard
author-email = asgard@allegrogroup.com
home-page = https://github.com/RulersOfAsgard/ALAMO-scheduler

[files]
packages =
 alamo_scheduler

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[entry_points]
console_scripts =
  alamo-scheduler = alamo_scheduler.manage:main