[metadata]
name = alamo-scheduler
author = Allegro Group - Asgard
author-email = asgard@allegrogroup.com
home-page = https://github.com/RulersOfAsgard/ALAMO-scheduler
classifier =
  Development Status :: 4 - Beta
  Intended Audience :: System Administrators
  Topic :: System :: Monitoring
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5

[files]
packages =
 alamo_scheduler

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[entry_points]
console_scripts =
  alamo-scheduler = alamo_scheduler.cli:main

pl.allegro.tech.monitoring.alamo.drivers =
    default = alamo_scheduler.drivers.default.sender:DefaultSender
